# maffin

./: CMakeLists.txt  DOCUMENTATION.md  README.md  imports.cpp  lexer.cpp  main.cpp  parser.cpp  token.cpp
example/: main.maff
include/: constants.h  imports.h  lexer.h  parser.h  token.h
parser/: parser.cpp  parser_vital_functions.cpp
structs/: HashMap.cpp  HashMap.h
structs/array/: array.cpp  array.h
structs/list/: list.h
structs/skiplist/: skiplist.h
structs/stack/: stack.cpp  stack.h
